# misty-shop

./: README.md  misty-shop.code-workspace
backend/: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  package.json
backend/drizzle/: 0000_real_lord_hawal.sql  0001_bored_roughhouse.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
backend/scripts/: migrate.ts
backend/src/: index.ts  main.rs
backend/src/db/: schema.ts  supabase.rs
backend/src/handlers/: items.ts
backend/src/models/: item.rs  item.ts
backend/src/services/: data_layer.rs  mod.rs  supabase_layer.rs
backend/src/stores/: items.ts
backend/src/utils/: mod.rs  queryString.ts  to_json_string.rs
frontend/: README.md  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: app.tsx
frontend/src/api/: utils.ts
frontend/src/components/: Item.tsx  Nav.tsx  UserList.vue
frontend/src/lib/components/: Item.svelte
frontend/src/models/: item.ts
frontend/src/routes/: about.tsx  index.tsx
frontend/src/routes/(app)/: +layout.svelte  +page.svelte
frontend/src/views/: HomeView.vue
