[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = "0.3.4"
tokio-stream = "0.1.10"
async-stream = "0.3.3"
async-session = "3.0.0"
http = "0.2.8"
serde = "1.0.145"
chrono = "0.4.22"
rand = "0.8.4"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]