[package]
name = "misty_backend"
authors = ["Adrian Călăvie <adrian.calavie06@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
postgrest = "1.6.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
